Redirect to new URL. http://next-l.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ author :
   twitter : enju_library
   feedburner : false
 
+gems:
+  - jekyll-redirect-from
+
 markdown: rdiscount
 markdown: kramdown
 
